fix: mime-types for images (#176)
